# rappi-test-1

./: .gitignore  README.md
backend/: .env.example  app.py  config.py  db.py  insights.py  prompts.py  pyproject.toml  requirements.txt
backend/graph/: __init__.py  error_handler.py  intent_classifier.py  response_formatter.py  routing.py  sql_executor.py  sql_generator.py  state.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: Chat.jsx  Insights.jsx
