[tool.poetry]
name = "rappi-backend"
version = "0.1.0"
description = "Backend for Rappi Operations Intelligence System"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.115.0"
uvicorn = { extras = ["standard"], version = ">=0.30.6" }
openai = ">=1.51.0"
langgraph = ">=0.2.28"
langchain-openai = ">=0.2.3"
langchain-core = ">=0.3.10"
pandas = ">=2.2.3"
openpyxl = ">=3.1.5"
python-dotenv = ">=1.0.1"
tabulate = ">=0.9.0"
numpy = ">=2.1.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
